--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>绿电赋能，零元启航 —— 上海酒店零碳新机遇</title>
+    <meta name="viewport" content="width=device-width, initial-scale=0.85"> <title>绿电赋能，零元启航 —— 上海酒店零碳新机遇</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.8/dist/chart.umd.min.js"></script>
@@ -102,11 +101,13 @@
         }
     </style>
 </head>
-<body class="font-sans bg-light text-dark overflow-x-hidden"> <audio id="bgMusic" loop>
-        <source src="https://m701.music.126.net/20250619003004/a453de4e98a50bfc92458a7815371822/jdymusic/obj/wo3DlMOGwrbDjj7DisKw/60111003609/d693/9949/89f5/1ccfacac5f094371b3967c13d17ff34f.mp3?vuutv=u/7xodXiacf9Hsfc4QxHw1UB5v/CyrG+Wxlvcr2H2z1AryIHXlhPRx1zGIk2u2TTg8CQrfRfqs1cfvkn8ZtKBtpAZROvs2WGjs2fxZ1rUmo=&bitrate=320002" type="audio/mpeg">
+<body class="font-sans bg-light text-dark overflow-x-hidden">
+    <audio id="bgMusic" loop>
+        <source src="https://m701.music.126.net/20250619003004/a453de4e98a50bfc92458a7815371822/jdymusic/obj/wo3DlMOGwrbDjj7DisKw/60111003609/d693/9949/89f5/1ccfacac5f094371b3967c13d17ff34f.mp3?vuutv=u/7xodXiacf9Hsfc4QxHw1UB5v/CyrG+Wxlvcr2H2z1AryIHXlhPRx1zGIk2u2TTg8CQrfRfRfqs1cfvkn8ZtKBtpAZROvs2WGjs2fxZ1rUmo=&bitrate=320002" type="audio/mpeg">
     </audio>
     <button id="musicToggle" class="fixed top-4 right-4 z-50 bg-primary/80 text-white rounded-full w-10 h-10 flex items-center justify-center shadow-lg transition-all hover:bg-primary hover:scale-110">
-        <i class="fa fa-volume-off"></i> </button>
+        <i class="fa fa-volume-off"></i>
+    </button>
 
     <div class="fixed top-1/2 right-4 z-40 flex flex-col gap-3">
         <button class="nav-dot w-3 h-3 rounded-full border-2 border-primary bg-white opacity-70 transition-all duration-300 hover:opacity-100" data-page="page1"></button>
@@ -139,13 +140,13 @@
             </div>
         </section>
 
-        <section id="page2" class="page absolute inset-0 flex flex-col items-center justify-center bg-light text-dark p-6 opacity-0 translate-y-full">
-            <div class="max-w-6xl mx-auto px-4 overflow-y-auto h-screen py-12">
+        <section id="page2" class="page absolute inset-0 flex flex-col bg-light text-dark p-6 opacity-0 translate-y-full">
+            <div class="max-w-5xl mx-auto px-4 overflow-y-auto h-full py-12">
                 <h2 class="text-[clamp(2rem,5vw,3rem)] font-bold mb-12 text-center text-primary">
                     零元用绿电模式核心优势
                 </h2>
 
-                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
                     <div class="advantage-card bg-white rounded-xl shadow-xl p-8 transform transition-all hover:scale-105 hover:shadow-2xl opacity-0 translate-y-8" style="transition-delay: 0.1s">
                         <div class="w-16 h-16 bg-primary/10 rounded-full flex items-center justify-center mb-6 mx-auto">
                             <i class="fa fa-money text-3xl text-primary"></i>
@@ -212,14 +213,13 @@
                 </div>
             </div>
         </section>
-
         <section id="page3" class="page absolute inset-0 flex flex-col items-center justify-center bg-light text-dark p-6 opacity-0 translate-y-full">
             <div class="max-w-6xl mx-auto px-4 overflow-y-auto h-screen py-12">
                 <h2 class="text-[clamp(2rem,5vw,3rem)] font-bold mb-12 text-center text-primary">
                     活动详情
                 </h2>
 
-                <div class="grid grid-cols-1 lg:grid-cols-2 gap-12">
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
                     <div class="bg-white rounded-xl shadow-xl p-8">
                         <h3 class="text-2xl font-bold mb-6 text-center text-primary">活动流程</h3>
                         <div class="space-y-6">
