--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 </head>
 <body class="font-sans bg-light text-dark overflow-x-hidden">
     <audio id="bgMusic" loop>
-        <source src="https://m701.music.126.net/20250619003004/a453de4e98a50bfc92458a7815371822/jdymusic/obj/wo3DlMOGwrbDjj7DisKw/60111003609/d693/9949/89f5/1ccfacac5f094371b3967c13d17ff34f.mp3?vuutv=u/7xodXiacf9Hsfc4QxHw1UB5v/CyrG+Wxlvcr2H2z1AryIHXlhPRx1zGIk2u2TTg8CQrfRfRfqs1cfvkn8ZtKBtpAZROvs2WGjs2fxZ1rUmo=&bitrate=320002" type="audio/mpeg">
+        <source src="https://od.lk/s/MzVfNjE3OTgzNDlf/%E9%9D%92%E5%B1%B1%E5%85%A5%E7%94%BB.mp3" type="audio/mpeg">
     </audio>
     <button id="musicToggle" class="fixed top-4 right-4 z-50 bg-primary/80 text-white rounded-full w-10 h-10 flex items-center justify-center shadow-lg transition-all hover:bg-primary hover:scale-110">
         <i class="fa fa-volume-off"></i>
