--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 </head>
 <body class="font-sans bg-light text-dark overflow-x-hidden">
     <audio id="bgMusic" loop>
-        <source src="https://raw.githubusercontent.com/30515245/yqh/main/qmyh.mp3" type="audio/mpeg">
+        <source src="https://od.lk/s/MzVfNjE3OTgzNDlf/%E9%9D%92%E5%B1%B1%E5%85%A5%E7%94%BB.mp3" type="audio/mpeg">
     </audio>
     <button id="musicToggle" class="fixed top-4 right-4 z-50 bg-primary/80 text-white rounded-full w-10 h-10 flex items-center justify-center shadow-lg transition-all hover:bg-primary hover:scale-110">
         <i class="fa fa-volume-off"></i>
