--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                     <h2 class="text-[clamp(1.8rem,4vw,2.5rem)] font-bold mb-8 text-primary">立即报名</h2>
 
                     <div class="mb-8 border-b pb-8 border-gray-200">
-                        <img src="https://blogtc.30515245.xyz/TXLEWM.jpg" alt="活动报名二维码" class="w-64 h-64 mx-auto mb-6 rounded-lg shadow-md">
+                        <img src="https://blogtc.30515245.xyz/txwd.webp" alt="活动报名二维码" class="w-64 h-64 mx-auto mb-6 rounded-lg shadow-md">
                         <p class="text-lg font-semibold mb-4">请扫描上方二维码报名</p>
                         <div class="text-gray-700 space-y-2">
                             <p>如有任何疑问，请通过以下方式联系我们</p>
